# ovgme

./: CHANGELOG.txt  CMakeLists.txt  OvGME.cbp  OvGME.cscope_file_list  OvGME.depend  OvGME.layout  README.md  README.txt  resource.rc
.github/workflows/: cmake.yml
include/: gme.h  gme_netw.h  gme_tools.h
src/: gme_conf.cpp  gme_dlg_main.cpp  gme_dlg_mods.cpp  gme_mods.cpp  gme_netw.cpp  gme_repo.cpp  gme_tools.cpp
